[package]
name = "pchain_network"
version = "0.4.2"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2021"
description = "parallelchain-network: Libp2p based Network Layer implementation for ParallelChain Mainnet."
license = "Apache-2.0"
repository = "https://github.com/parallelchain-io/pchain-network"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
async-trait = "0.1"
base64url = "0.1.0"
futures = "0.3.21"
# for libp2p version > 0.43.0, require: install protoc binary to ~/.cargo/bin.
libp2p = "0.43.0"
log = "0.4"
pchain-types = "0.4.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }