[package]
name = "pchain_network"
version = "0.4.3"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2021"
description = "parallelchain-network: Libp2p based Network Layer implementation for ParallelChain Mainnet."
license = "Apache-2.0"
repository = "https://github.com/parallelchain-io/pchain-network"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
async-trait = "0.1"
base64url = "0.1.0"
futures = "0.3.21"
libp2p = { version = "0.52.1", features = ["dns", "gossipsub", "identify", "ping", "tcp", "kad", "noise", "yamux", "macros", "tokio"]}
log = "0.4"
pchain-types = "0.4.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
libp2p-mplex = "0.40.0"
rand = "0.8.5"
ed25519-dalek = "1.0.1"

[dev-dependencies]
serial_test = "0.5"