[package]
name = "pchain_network"
version = "0.5.0"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2021"
description = "parallelchain-network: Libp2p based Network Layer implementation for ParallelChain Mainnet."
license = "Apache-2.0"
repository = "https://github.com/parallelchain-io/pchain-network"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
async-trait = "0.1"
base64url = "0.1.0"
borsh = "0.10.2"
futures = "0.3.21"
hotstuff_rs = {git = "https://github.com/parallelchain-io/hotstuff_rs", branch = "0.3"}
libp2p = { version = "0.52.1", features = ["dns", "gossipsub", "identify", "ping", "tcp", "kad", "noise", "yamux", "macros", "tokio"]}
log = "0.4"
pchain-types = { git = "https://github.com/parallelchain-io/pchain-types-rust", branch = "protocol_v0.5" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
libp2p-mplex = "0.40.0"

[dev-dependencies]
serial_test = "0.5"